# bdo-market-utils

./: .coveragerc  .gitignore  README.md  README.rst  pyproject.toml
bdo_market_utils/: all_items_sorted.json  bdo_market_utils.py  helpers.py  market_analyzer.py  market_scraper.py  marketplace_items.json
tests/: .test_bdo_market_utils.py.swp  test_bdo_market_utils.py
