[tool.poetry]
name = "bdo-market-utils"
version = "0.1.0"
description = ""
authors = ["tom <xian.tom.wan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
